--- a/.github/linters/markdown-link-config.json
+++ b/.github/linters/markdown-link-config.json
@@ -3,6 +3,9 @@
   "ignorePatterns": [
     {
       "pattern": "^https://hadenlabs.com"
+    },
+    {
+      "pattern": "^https://github.com/hadenlabs/docker-kali-linux/compare"
     }
   ],
   "replacementPatterns": [
