refactor: generator readme (#6)

--- a/provision/generators/README.yaml
+++ b/provision/generators/README.yaml
@@ -40,3 +40,9 @@ badges:
 description: |-
 
   docker-kali-linux for project
+
+# How to use this project
+usage: |-
+  ```bash
+  task setup
+  ```
