--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,6 +4,7 @@ includes:
   changelog: ./provision/task/changelog.yml
   python: ./provision/task/python.yml
   git: ./provision/task/git.yml
+  go: ./provision/task/go.yml
   docs: ./provision/task/docs.yml
   docker: ./provision/task/docker.yml
   plantuml: ./provision/task/plantuml.yml
@@ -13,6 +14,9 @@ includes:
   prettier: ./provision/task/prettier.yml
   sonar: ./provision/task/sonar.yml
   diagrams: ./provision/diagrams/Taskfile.yml
+  images:
+    taskfile: ./images/Taskfile.yml
+    dir: ./images
 
 env:
   DOCKER:
@@ -35,6 +39,9 @@ dotenv:
 vars:
   PROJECT_NAME: docker-kali-linux
   ORGANIZATION: hadenlabs
+  DOCKER_ORGANIZATION: hadenlabs
+  DOCKER_PLATFORMS: linux/amd64,linux/arm/v7,linux/arm64/v8
+  DOCKER_IMAGE_NAME: python
   REVIEWERS: luismayta
   PYTHON_VERSION: 3.9.2
   NODE_VERSION: 16.6.1
@@ -79,6 +86,7 @@ tasks:
       - gitflow:check
       - docs:check
       - sonar:check
+      - go:check
 
   readme:
     run: once
@@ -103,9 +111,24 @@ tasks:
       - task: python:setup
       - task: python:precommit
       - task: git:setup
+      - task: go:setup
       - task: gitflow:setup
 
   environment:
     desc: Setup environment of project
     cmds:
       - task: python:environment
+
+  build:docker:
+    run: once
+    desc: Build docker Image.
+    cmds:
+      - task: images:build
+
+  push:docker:
+    run: once
+    desc: Push docker Image.
+    deps:
+      - docker:login
+    cmds:
+      - task: images:publish
