--- a/.github/workflows/dockerhub-cd.yml
+++ b/.github/workflows/dockerhub-cd.yml
@@ -33,11 +33,8 @@ jobs:
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login to dockerhub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Push Images Docker
         run: task push:docker
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
