--- a/images/Taskfile.yml
+++ b/images/Taskfile.yml
@@ -11,8 +11,8 @@ tasks:
         docker build .
         --platform={{.DOCKER_PLATFORMS}}
         --file core/Dockerfile
-        --tag {{.DOCKER_ORGANIZATION}}/{{.DOCKER_IMAGE_NAME}}:{{.APP_TAG}}
-        --build-arg VERSION={{.APP_TAG}}
+        --tag {{.DOCKER_ORGANIZATION}}/{{.DOCKER_IMAGE_NAME}}:core
+        --build-arg VERSION=core
     vars:
       DOCKER_PLATFORMS: linux/amd64
 
@@ -24,7 +24,6 @@ tasks:
         docker buildx build .
         --platform={{.DOCKER_PLATFORMS}}
         --file core/Dockerfile
-        --tag {{.DOCKER_ORGANIZATION}}/{{.DOCKER_IMAGE_NAME}}:{{.APP_TAG}}
-        --tag {{.DOCKER_ORGANIZATION}}/{{.DOCKER_IMAGE_NAME}}:latest
-        --build-arg VERSION={{.APP_TAG}}
+        --tag {{.DOCKER_ORGANIZATION}}/{{.DOCKER_IMAGE_NAME}}:core
+        --build-arg VERSION=core
         --push
